--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="shortcut icon" href="./image/logo.svg" type="image/x-icon">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="./lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./lib/wow-1.1.2/animate.min.css">
 
