--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -31,7 +31,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient">
             <a class="navbar-brand d-flex align-items-center pl-xl-5" href="#">
                 <img src="/static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
-                <span class="name-brand h4 ml-3">Choosing</span>
+                <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,9 +39,9 @@
             </button>
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <form class="form-inline my-2 my-lg-0 flex-grow-1 justify-content-center" id="test-code">
+                <form class="wow fadeInDown form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Enter the test code ...">
+                        <input type="text" class="form-control " placeholder="Enter the join code ...">
                         <div class="input-group-append">
                             <button class="btn btn-light" type="button">Start</button>
                         </div>
@@ -54,12 +54,12 @@
                     <li class="nav-item ">
                         <a class="nav-link" href="#">Link</a>
                     </li>
-                    <li class="nav-item  dropdown">
+                    <li class="nav-item  dropdown ">
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             Dropdown
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu dropdown-menu flipInX m-0" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Action</a>
                             <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
@@ -69,7 +69,7 @@
 
                 </ul>
                 <ul class="navbar-nav justify-content-end">
-                    <li class="nav-item ml-2 px-3" id="avatar">
+                    <li class="nav-item ml-4 px-3" id="avatar">
                         <div class="avt-container">
                             <img class="avt_image" src="/static/image/avatar.jpg" alt="Avt">
                             <span class="username ml-2">Nguyễn Quốc Thịnh</span>
@@ -84,30 +84,66 @@
     <!-- Navigation -->
 
     <!-- Header -->
-    <header class="bl-1 banner">
+    <header class="bl-1 banner shadow">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="/static/image/avatar.jpg" style="height: 400px;" alt="First slide">
+                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_3.png" alt="First slide">
+                    <div class="carousel-caption d-none d-md-flex align-items-start">
+                        <h1 class="wow fadeInDown title mb-3">The best online checking platform</h1>
+                        <p class="wow fadeInUp text-left h5">The best choice of teachers to check
+                            students's learning results </p>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/static/image/avatar.jpg" style="height: 400px;" alt="Second slide">
+                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_2.png" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-flex">
+                        <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Take the test
+                            without Log In</h1>
+                        <div class="input-group mb-3 test-code">
+                            <input type="text" data-wow-delay="0.3s" data-wow-duration="1.2s"
+                                class="wow fadeInLeft form-control" placeholder="Enter the join code ..."
+                                aria-label="Recipient's username" aria-describedby="basic-addon2">
+                            <div class="input-group-append">
+                                <button data-wow-delay="0.3s" data-wow-duration="1.2s"
+                                    class="wow fadeInRight btn btn-info" type="button">Let's Start</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/static/image/avatar.jpg" style="height: 400px;" alt="Third slide">
+                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_1.png" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-flex align-items-start">
+                        <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Interface's
+                            easy to access for
+                            everyone</h1>
+                        <div class="d-flex w-100">
+                            <button data-wow-delay="0.3s" data-wow-duration="1.2s"
+                                class="wow fadeInLeft flex-grow-1 btn btn-customize py-3 ">Register</button>
+                            <button data-wow-delay="0.3s" data-wow-duration="1.2s"
+                                class="wow fadeInRight flex-grow-1 btn btn-customize py-3 ml-4">Log In</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
             </a>
         </div>
     </header>
     <!-- Header -->
+
+
+
+
+    <!-- Footer -->
+
+    
+
+    <!-- Footer -->
 
 
 
