--- a/home-page.html
+++ b/home-page.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="/static/style/GlobalStyle.css">
     <link rel="stylesheet" href="/static/style/HeaderBanner.css">
     <link rel="stylesheet" href="/static/style/Footer/Footer.css">
-    <link rel="stylesheet" href="/static/style/HomePage/HomePage.css">
     <link rel="stylesheet" href="/static/style/NavigationBar/NavigationBar.css">
 
 
@@ -61,7 +60,7 @@
                             aria-haspopup="true" aria-expanded="false">
                             Dropdown
                         </a>
-                        <div class="dropdown-menu dropdown-menu fadeInUp m-0" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu dropdown-menu flipInX m-0" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Action</a>
                             <a class="dropdown-item" href="#">Another action</a>
                             <div class="dropdown-divider"></div>
@@ -89,7 +88,7 @@
     <!-- Content -->
 
     <!-- Header -->
-    <header class="bl-1 banner shadow mb-5">
+    <header class="bl-1 banner shadow">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -142,124 +141,14 @@
     </header>
     <!-- Header -->
 
-    <main class="container HomePage">
-        <!-- Card -->
-        <section class="row py-3 mb-3">
-            <div class="col-lg-3 col-md-6 mb-3">
-                <div data-wow-delay="0.1s" class=" wow fadeInUp card p-3">
-                    <i class="mb-3 bi bi-clock-history"></i>
-                    <p class="description text-center">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam magnam ullam magni aspernatur
-                        pariatur suscipit deleniti omnis vero aut, fugiat quam veniam illo repellat consequatur
-                        assumenda? Suscipit rerum possimus provident.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-3">
-                <div data-wow-delay="0.3s" class=" wow fadeInUp card p-3">
-                    <i class="mb-3 bi bi-patch-check"></i>
-                    <p class="description text-center">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam magnam ullam magni aspernatur
-                        pariatur suscipit deleniti omnis vero aut, fugiat quam veniam illo repellat consequatur
-                        assumenda? Suscipit rerum possimus provident.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-3">
-                <div data-wow-delay="0.5s" class=" wow fadeInUp card p-3">
-                    <i class="mb-3 bi bi-tv"></i>
-                    <p class="description text-center">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam magnam ullam magni aspernatur
-                        pariatur suscipit deleniti omnis vero aut, fugiat quam veniam illo repellat consequatur
-                        assumenda? Suscipit rerum possimus provident.
-                    </p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-3">
-                <div data-wow-delay="0.7s" class=" wow fadeInUp card p-3">
-                    <i class="mb-3 bi bi-shield-check"></i>
-                    <p class="description text-center">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam magnam ullam magni aspernatur
-                        pariatur suscipit deleniti omnis vero aut, fugiat quam veniam illo repellat consequatur
-                        assumenda? Suscipit rerum possimus provident.
-                    </p>
-                </div>
-            </div>
-        </section>
-        <!-- Card -->
-
-        <!-- Welcome -->
-        <section class="row mb-3">
-            <div  class=" wow fadeInLeft col-md-6">
-                <img class="w-100" src="/static/image/welcome.png" alt="">
-            </div>
-            <div class="wow fadeInRight col-md-6 text-dark">
-                <h1 class="title font-weight-bold">Welcome to E-Choosing</h1>
-                <p class="description h5">
-                    E-Choosing is a convenient online testing platform with a user-friendly interface, quick test
-                    creation and taking, and handy features like automatic scoring and results storage. It enables users
-                    to save time and focus on learning without interruptions, making test-taking and progress tracking
-                    easier.
-                </p>
-                <div class="d-flex">
-                    <button class="btn btn-customize py-3">Register</button>
-                    <button class="btn btn-customize py-3 ml-4">Log In</button>
-                </div>
-            </div>
-        </section>
-        <!-- Welcome -->
-
-        <!-- Category -->
-        <section class="container-xxl py-5 category HomePage">
-            <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-center px-3">Categories</h6>
-                    <h1 class="mb-3 font-weight-bold">Quiz Categories</h1>
-                </div>
-                <div class="row">
-                    <div data-wow-delay="0.3s" class="wow bounceIn col-md-6 quiz-banner">
-                        <img class="m-3 w-100" src="/static/image/toan.png" alt="">
-                        <div class="quiz-title">
-                            <h5 class="m-0">Math</h5>
-                            <p class="m-0">5 Template</p>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="row">
-                            <div data-wow-delay="0.5s" class="wow bounceIn col-md-12 quiz-banner">
-                                <img class="m-3 w-100" src="/static/image/tin.png" alt="">
-                                <div class="quiz-title">
-                                    <h5 class="m-0">Information technology</h5>
-                                    <p class="m-0">5 Template</p>
-                                </div>
-                            </div>
-                            <div data-wow-delay="0.7s" class="wow bounceIn col-md-6 quiz-banner">
-                                <img class="m-3 w-100" src="/static/image/hoa.png" alt="">
-                                <div class="quiz-title">
-                                    <h5 class="m-0">Chemical</h5>
-                                    <p class="m-0">5 Template</p>
-                                </div>
-                            </div>
-                            <div data-wow-delay="0.9s" class="wow bounceIn col-md-6 quiz-banner">
-                                <img class="m-3 w-100" src="/static/image/dia.png" alt="">
-                                <div class="quiz-title">
-                                    <h5 class="m-0">Geography</h5>
-                                    <p class="m-0">5 Template</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Category -->
+    <main class="py-5 mb-4">
 
     </main>
 
 
     <!-- Footer -->
 
-    <footer class="wow fadeInUp w-100 py-3 bg-linear-gradient Footer">
+    <footer class="w-100 py-3 bg-linear-gradient Footer">
         <div class="container text-light ">
             <div class="row pt-3">
                 <div class="col-lg-4 col-md-6 mb-3">
@@ -267,8 +156,7 @@
                         <img src="/static/image/light.png" width="60px">
                         <h4 class="font-weight-bold ml-3">E-Choosing</h4>
                     </div>
-                    <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
-                        with instant
+                    <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments with instant
                         results for improvement. It offers a variety of subjects to choose from and a user-friendly
                         interface.</p>
                     <h6 class="font-weight-bold link">
@@ -313,7 +201,7 @@
 
                 <div class="col-lg-3 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Newsletter</h4>
-                    <p>Please enter your email address to receive notifications from us as soon as possible.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <form>
                         <div class="input-group mb-3">
                             <input type="email" class="form-control" placeholder="Enter your email">
