Complete Sign In, Sign Up Page

--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -144,7 +144,7 @@
 
     <main class="container HomePage">
         <!-- Card -->
-        <section class="row py-3 mb-3">
+        <section class="row py-3 mb-3 ">
             <div class="col-lg-3 col-md-6 mb-3">
                 <div data-wow-delay="0.1s" class=" wow fadeInUp card p-3">
                     <i class="mb-3 bi bi-clock-history"></i>
@@ -189,11 +189,11 @@
         <!-- Card -->
 
         <!-- Welcome -->
-        <section class="row mb-3">
+        <section class="row mb-3 ">
             <div  class=" wow fadeInLeft col-md-6">
                 <img class="w-100" src="/static/image/welcome.png" alt="">
             </div>
-            <div class="wow fadeInRight col-md-6 text-dark">
+            <div class="wow fadeInRight col-md-6 text-light">
                 <h1 class="title font-weight-bold">Welcome to E-Choosing</h1>
                 <p class="description h5">
                     E-Choosing is a convenient online testing platform with a user-friendly interface, quick test
@@ -210,10 +210,10 @@
         <!-- Welcome -->
 
         <!-- Category -->
-        <section class="container-xxl py-5 category HomePage">
+        <section class="container-xxl py-5 category ">
             <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-center px-3">Categories</h6>
+                <div class="text-center wow fadeInUp text-light" data-wow-delay="0.1s">
+                    <h6 class="text-center px-3 ">Categories</h6>
                     <h1 class="mb-3 font-weight-bold">Quiz Categories</h1>
                 </div>
                 <div class="row">
