--- a/pages/login.html
+++ b/pages/login.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="/lib/wow-1.1.2/animate.min.css">
 
     <link rel="stylesheet" href="/static/style/GlobalStyle.css">
-    <link rel="stylesheet" href="/static/style/HeaderBanner.css">
     <link rel="stylesheet" href="/static/style/Footer/Footer.css">
+    <link rel="stylesheet" href="/static/style/SignIn/SignIn.css">
     <link rel="stylesheet" href="/static/style/NavigationBar/NavigationBar.css">
 
 
@@ -29,7 +29,7 @@
 
     <!-- Navigation -->
     <div class="">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top shadow">
             <a class="navbar-brand d-flex align-items-center pl-xl-5" href="#">
                 <img src="/static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
@@ -83,70 +83,73 @@
     <!-- Navigation -->
 
     <!-- Content -->
-    <!-- Content -->
+    <div class="container-fluid SignIn">
+        <i class="bi bi-check2-circle stamp"></i>
+        <div class="row">
+            <div class="col-lg-7 col-md-10 box mx-auto">
+                <h1 class="text-center font-weight-bolder">Login</h1>
 
-    <!-- Header -->
-    <header class="bl-1 banner shadow">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_3.png" alt="First slide">
-                    <div class="carousel-caption d-none d-md-flex align-items-start">
-                        <h1 class="wow fadeInDown title mb-3">The best online checking platform</h1>
-                        <p class="wow fadeInUp text-left h5">The best choice of teachers to check
-                            students's learning results </p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_2.png" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-flex">
-                        <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Take the
-                            test
-                            without Log In</h1>
-                        <div class="input-group mb-3 test-code">
-                            <input type="text" data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                class="wow fadeInLeft form-control" placeholder="Enter the join code ..."
-                                aria-label="Recipient's username" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                    class="wow fadeInRight btn btn-customize" type="button">Let's Start</button>
-                            </div>
+                <div class="box-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Username</label>
+                            <i class="bi bi-person form-icon"></i>
+                            <input type="text" class="form-control shadow-none" id="exampleInputEmail1" aria-describedby="emailHelp"
+                                placeholder="Type your username ...">
+                            <small class="form-text text-muted d-none">Please enter your username.</small>
                         </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_1.png" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-flex align-items-start">
-                        <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Interface's
-                            easy to access for
-                            everyone</h1>
-                        <div class="d-flex w-100">
-                            <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                class="wow fadeInLeft flex-grow-1 btn btn-customize py-3 ">Register</button>
-                            <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                class="wow fadeInRight flex-grow-1 btn btn-customize py-3 ml-4">Log In</button>
+
+                        <div class="form-group mb-2 ">
+                            <label for="exampleInputEmail1">Password</label>
+                            <i class="bi bi-key form-icon"></i>
+                            <i class="bi bi-eye right-icon"></i>
+                            <input type="password" class="form-control shadow-none" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Type enter your password ...">
+                            <small class="form-text text-muted d-none">Please enter your password</small>
                         </div>
-                    </div>
+
+                        <div class="form-group">
+                            <a href="##">
+                                <p class="text-right">Fogot password ?</p>
+                            </a>
+                        </div>
+
+                        <button class="btn bg-linear-gradient w-100 mb-3 hover">
+                            Login
+                        </button>
+
+                        <p class="text-center w-100 mb-3">Or Sign Up Using</p>
+
+                        <div class="d-flex justify-content-center mb-5">
+                            <a href="##" class="login-icon hover">
+                                <img src="/static/image/google-icon.png" width="30px" alt="">
+                            </a>
+                            <a href="##" class="login-icon hover">
+                                <img src="/static/image/facebook-icon.png" width="30px" alt="">
+                            </a>
+                            <a href="##" class="login-icon hover">
+                                <img src="/static/image/github-icon.png" width="30px" alt="">
+                            </a>
+                        </div>
+
+                        <div class="text-center">
+                            <p class="mb-2">Don't have an account</p>
+                            <a href="##" class="btn bg-linear-gradient hover">
+                                <p class=" mb-0 px-4">Sign Up</p>
+                            </a>
+                        </div>
+
+                    </form>
                 </div>
+
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </a>
         </div>
-    </header>
-    <!-- Header -->
-
-    <main class="py-5 mb-4">
-
-    </main>
-
+    </div>
+    <!-- Content -->
 
     <!-- Footer -->
 
-    <footer class="w-100 py-3 bg-linear-gradient Footer">
+    <footer class="w-100 py-3 bg-linear-gradient shadow Footer">
         <div class="container text-light ">
             <div class="row pt-3">
                 <div class="col-lg-4 col-md-6 mb-3">
@@ -154,7 +157,8 @@
                         <img src="/static/image/light.png" width="60px">
                         <h4 class="font-weight-bold ml-3">E-Choosing</h4>
                     </div>
-                    <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments with instant
+                    <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
+                        with instant
                         results for improvement. It offers a variety of subjects to choose from and a user-friendly
                         interface.</p>
                     <h6 class="font-weight-bold link">
