Complete Course Page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./lib/wow-1.1.2/animate.min.css">
 
-    <title>Choosing Application</title>
+    <title>E-Choosing </title>
 </head>
 
 <body>
