--- a/pages/signup.html
+++ b/pages/signup.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/block.css">
 
 
-    <title>Choosing Application</title>
+    <title>E-Choosing </title>
 </head>
 
 <body>
@@ -86,7 +86,7 @@
     <div class="container-fluid SignIn">
         <i class="bi bi-check2-circle stamp"></i>
         <div class="row">
-            <div class="col-lg-7 col-md-10 box mx-auto">
+            <div class="wow fadeInUp col-lg-7 col-md-10 box mx-auto">
                 <h1 class="text-center font-weight-bolder">Sign Up</h1>
 
                 <div class="box-body">
