--- a/templete-page.html
+++ b/templete-page.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/block.css">
 
 
-    <title>Choosing Application</title>
+    <title>E-Choosing </title>
 </head>
 
 <body>
