Complete Contract & Reset Password Page

--- a/pages/contract.html
+++ b/pages/contract.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="/lib/bootstrap-4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/lib/bootstrap-4.6.2/dist/css/form-floating.css">
     <link rel="stylesheet" href="/lib/wow-1.1.2/animate.min.css">
 
     <link rel="stylesheet" href="/static/style/GlobalStyle.css">
     <link rel="stylesheet" href="/static/style/HeaderBanner.css">
     <link rel="stylesheet" href="/static/style/Footer/Footer.css">
-    <link rel="stylesheet" href="/static/style/Course/Course.css">
+    <link rel="stylesheet" href="/static/style/Contract/Contract.css">
     <link rel="stylesheet" href="/static/style/NavigationBar/NavigationBar.css">
 
 
@@ -83,16 +84,14 @@
     </div>
     <!-- Navigation -->
 
-
-
     <!-- Header -->
-    <header class="bl-1 banner shadow">
+    <header class="bl-1 banner shadow mb-5">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100 pr-md-5" src="/static/image/banner_3.png" alt="First slide">
                     <div class="carousel-caption d-none d-md-flex align-items-start">
-                        <h1 class="wow fadeInDown title mb-4">The best online checking platform</h1>
+                        <h1 class="wow fadeInDown title mb-3">The best online checking platform</h1>
                         <p class="wow fadeInUp text-left h5">The best choice of teachers to check
                             students's learning results </p>
                     </div>
@@ -100,10 +99,10 @@
                 <div class="carousel-item">
                     <img class="d-block w-100 pr-md-5" src="/static/image/banner_2.png" alt="Second slide">
                     <div class="carousel-caption d-none d-md-flex">
-                        <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-4">Take the
+                        <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Take the
                             test
                             without Log In</h1>
-                        <div class="input-group mb-4 test-code">
+                        <div class="input-group mb-3 test-code">
                             <input type="text" data-wow-delay="0.3s" data-wow-duration="1.2s"
                                 class="wow fadeInLeft form-control" placeholder="Enter the join code ..."
                                 aria-label="Recipient's username" aria-describedby="basic-addon2">
@@ -117,7 +116,7 @@
                 <div class="carousel-item">
                     <img class="d-block w-100 pr-md-5" src="/static/image/banner_1.png" alt="Third slide">
                     <div class="carousel-caption d-none d-md-flex align-items-start">
-                        <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-4">Interface's
+                        <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Interface's
                             easy to access for
                             everyone</h1>
                         <div class="d-flex w-100">
@@ -139,182 +138,95 @@
     </header>
     <!-- Header -->
 
-    <!-- Content -->
-    <main class="container py-5 Course">
+    <main class="container mb-5 Contract">
+        <h6 class="text-center text-light font-weight-bold mb-3">Contract us</h6>
+        <h1 class="text-center text-light font-weight-bold mb-3 text-capitalize">Contract for any query</h1>
+        <div class="row text-light">
+            <div class="col-lg-4 col-md-6 mb-3 wow fadeInUp " data-wow-delay="0.3s">
+                <h4 class="font-weight-bold mb-3">Get In Touch</h4>
 
-        <h1 class="text-light text-center font-weight-bold mb-3">Courses</h1>
-        <section class="row">
-
-            <!-- 1 Khoá học :'( -->
-            <div class="col-lg-3 col-md-6 mb-4 ">
-                <div data-wow-delay="0.2s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/vatly.png" alt="">
-                    <div class="content py-2 text-center bg-light ">
-                        <h5 class="mb-0">Physics</h5>
-                        <p class="mb-0">20 Question</p>
+                <div class="group d-flex">
+                    <div class="icon">
+                        <i class="bi bi-geo-alt"></i>
                     </div>
-                    <div class="action">
-                        <button class="fadeInLeft btn btn-light">
-                            <i class="bi bi-share"></i>
-                        </button>
-                        <button class="fadeIn m-0 btn btn-light">Join</button>
-                        <button class="fadeInRight m-0 btn btn-light">
-                            <i class="bi bi-bookmark-dash"></i>
-                        </button>
+                    <div class="content">
+                        <h5 class="font-weight-bold">Address</h5>
+                        <p>543, Ton Duc Thang, Da Nang</p>
+                    </div>
+                </div>
+
+                <div class="group d-flex">
+                    <div class="icon">
+                        <i class="bi bi-envelope-at"></i>
+                    </div>
+                    <div class="content">
+                        <h5 class="font-weight-bold">Email</h5>
+                        <p>thinhnq3009@gmail.com</p>
+                    </div>
+                </div>
+
+                <div class="group d-flex">
+                    <div class="icon">
+                        <i class="bi bi-phone-vibrate"></i>
+                    </div>
+                    <div class="content">
+                        <h5 class="font-weight-bold">Phone</h5>
+                        <p>0383914506</p>
                     </div>
                 </div>
             </div>
 
-            <!-- 1 Khoá học :'( -->
-            <div class="col-lg-3 col-md-6 mb-4 ">
-                <div data-wow-delay="0.4s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/toan.png" alt="">
-                    <div class="content py-2 text-center bg-light ">
-                        <h5 class="mb-0">Math</h5>
-                        <p class="mb-0">20 Question</p>
-                    </div>
-                    <div class="action">
-                        <button class="fadeInLeft btn btn-light">
-                            <i class="bi bi-share"></i>
-                        </button>
-                        <button class="fadeIn m-0 btn btn-light">Join</button>
-                        <button class="fadeInRight m-0 btn btn-light">
-                            <i class="bi bi-bookmark-dash"></i>
-                        </button>
-                    </div>
-                </div>
+            <div class="wow fadeInUp  col-lg-4 col-md-6 mb-3 position-relative px-0" data-wow-delay="0.5s">
+                <iframe class="position-absolute"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15335.530860393153!2d108.1657712750767!3d16.071574872070215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314218e3b08cbe8d%3A0x1c863974f74c467e!2zVGhhbmggS2jDqiBUw6J5LCBUaGFuaCBLaMOqLCDEkMOgIE7hurVuZywgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1675417361746!5m2!1svi!2s"
+                    width="100%" height="100%" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
-            <!-- 1 Khoá học :'( -->
-            <div class="col-lg-3 col-md-6 mb-4 ">
-                <div data-wow-delay="0.6s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/tin-2.png" alt="">
-                    <div class="content py-2 text-center bg-light ">
-                        <h5 class="mb-0">Informatics</h5>
-                        <p class="mb-0">20 Question</p>
+            <div class="col-lg-4 col-md-12 wow fadeInUp text-dark" data-wow-delay="0.7s">
+                <form>
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                <label for="name">Your Name</label>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                <label for="email">Your Email</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                <label for="subject">Subject</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <textarea class="form-control" placeholder="Leave a message here" id="message"
+                                    style="height: 150px"></textarea>
+                                <label for="message">Message</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button class="btn btn-customize w-100 py-3" type="submit">Send Message</button>
+                        </div>
                     </div>
-                    <div class="action">
-                        <button class="fadeInLeft btn btn-light">
-                            <i class="bi bi-share"></i>
-                        </button>
-                        <button class="fadeIn m-0 btn btn-light">Join</button>
-                        <button class="fadeInRight m-0 btn btn-light">
-                            <i class="bi bi-bookmark-dash"></i>
-                        </button>
-                    </div>
-                </div>
+                </form>
             </div>
-
-            <!-- 1 Khoá học :'( -->
-            <div class="col-lg-3 col-md-6 mb-4 ">
-                <div data-wow-delay="0.8s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/dia.png" alt="">
-                    <div class="content py-2 text-center bg-light ">
-                        <h5 class="mb-0">Geography</h5>
-                        <p class="mb-0">20 Question</p>
-                    </div>
-                    <div class="action">
-                        <button class="fadeInLeft btn btn-light">
-                            <i class="bi bi-share"></i>
-                        </button>
-                        <button class="fadeIn m-0 btn btn-light">Join</button>
-                        <button class="fadeInRight m-0 btn btn-light">
-                            <i class="bi bi-bookmark-dash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 1 Khoá học :'( -->
-            <div class="col-lg-3 col-md-6 mb-4 ">
-                <div data-wow-delay="0.2s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/vatly.png" alt="">
-                    <div class="content py-2 text-center bg-light ">
-                        <h5 class="mb-0">Physics</h5>
-                        <p class="mb-0">20 Question</p>
-                    </div>
-                    <div class="action">
-                        <button class="fadeInLeft btn btn-light">
-                            <i class="bi bi-share"></i>
-                        </button>
-                        <button class="fadeIn m-0 btn btn-light">Join</button>
-                        <button class="fadeInRight m-0 btn btn-light">
-                            <i class="bi bi-bookmark-dash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 1 Khoá học :'( -->
-            <div class="col-lg-3 col-md-6 mb-4 ">
-                <div data-wow-delay="0.4s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/toan.png" alt="">
-                    <div class="content py-2 text-center bg-light ">
-                        <h5 class="mb-0">Math</h5>
-                        <p class="mb-0">20 Question</p>
-                    </div>
-                    <div class="action">
-                        <button class="fadeInLeft btn btn-light">
-                            <i class="bi bi-share"></i>
-                        </button>
-                        <button class="fadeIn m-0 btn btn-light">Join</button>
-                        <button class="fadeInRight m-0 btn btn-light">
-                            <i class="bi bi-bookmark-dash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 1 Khoá học :'( -->
-            <div class="col-lg-3 col-md-6 mb-4 ">
-                <div data-wow-delay="0.6s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/dia.png" alt="">
-                    <div class="content py-2 text-center bg-light ">
-                        <h5 class="mb-0">Geography</h5>
-                        <p class="mb-0">20 Question</p>
-                    </div>
-                    <div class="action">
-                        <button class="fadeInLeft btn btn-light">
-                            <i class="bi bi-share"></i>
-                        </button>
-                        <button class="fadeIn m-0 btn btn-light">Join</button>
-                        <button class="fadeInRight m-0 btn btn-light">
-                            <i class="bi bi-bookmark-dash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 1 Khoá học :'( -->
-            <div class="col-lg-3 col-md-6 mb-4 ">
-                <div data-wow-delay="0.8s" class="wow fadeInUp card-course shadow position-relative">
-                    <img class="mb-2 course-img" src="/static/image/tin-2.png" alt="">
-                    <div class="content py-2 text-center bg-light ">
-                        <h5 class="mb-0">Informatics</h5>
-                        <p class="mb-0">20 Question</p>
-                    </div>
-                    <div class="action">
-                        <button class="fadeInLeft btn btn-light">
-                            <i class="bi bi-share"></i>
-                        </button>
-                        <button class="fadeIn m-0 btn btn-light">Join</button>
-                        <button class="fadeInRight m-0 btn btn-light">
-                            <i class="bi bi-bookmark-dash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-
-        </section>
+        </div>
     </main>
-    <!-- Content -->
+
+
     <!-- Footer -->
 
     <footer class="w-100 py-3 bg-linear-gradient Footer">
         <div class="container text-light ">
             <div class="row pt-3">
-                <div class="col-lg-4 col-md-6 mb-4">
+                <div class="col-lg-4 col-md-6 mb-3">
                     <div class="d-flex align-items-center">
                         <img src="/static/image/light.png" width="60px">
                         <h4 class="font-weight-bold ml-3">E-Choosing</h4>
@@ -327,7 +239,7 @@
                         <a>About Us <i class="bi bi-arrow-right ml-2"></i></a>
                     </h6>
                 </div>
-                <div class="col-lg-3 col-md-6 mb-4">
+                <div class="col-lg-3 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Contract</h4>
                     <p><span><i class="bi bi-geo-fill mr-2"></i></span>542 Ton Duc Thang, Da Nang</p>
                     <p><span><i class="bi bi-telephone-fill mr-2"></i></span>0123456789</p>
@@ -339,7 +251,7 @@
                         <i class="bi bi-instagram"></i>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 mb-4">
+                <div class="col-lg-2 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Link</h4>
                     <a href="##">
                         <p class="mb-2 link">
@@ -363,11 +275,11 @@
                     </a>
                 </div>
 
-                <div class="col-lg-3 col-md-6 mb-4">
+                <div class="col-lg-3 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Newsletter</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <form>
-                        <div class="input-group mb-4">
+                        <div class="input-group mb-3">
                             <input type="email" class="form-control" placeholder="Enter your email">
                             <div class="input-group-append">
                                 <button class="btn btn-customize" type="button">Button</button>
